# OUTREACH

./: README.md  demo.py  pyproject.toml
src/: .env
src/app/: .env  main.py
src/app/config/database/: config.py  database.py
src/app/models/: document.py  user.py
src/app/routers/: document.py  user.py
src/app/schemas/: document.py  user.py
src/app/services/: documentManager.py  userManager.py
src/app/utils/: dropbox_upload.py
